# florist

./: .dockerignore  .env.example  .gitignore  .prettierrc.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  project.config.json  project.private.config.json  skills-lock.json  start-dev.sh  tsconfig.base.json  养花人｜花卉养护小程序 产品需求文档（PRD）.md
services/ai-agent/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
services/ai-agent/app/: config.py  main.py
services/ai-agent/app/agent/: __init__.py  compressor.py  engine.py  runner.py  skill_router.py  system_prompt.py  types.py
services/ai-agent/app/analytics/: collector.py  dashboard.py
services/ai-agent/app/api/: admin.py  advice.py  chat.py  deps.py  diagnosis.py  health.py  memory_api.py  middleware.py  router.py  schemas.py  taxonomy.py  tools_api.py
services/ai-agent/app/audit/: logger.py  models.py
services/ai-agent/app/constants/: enums.py
services/ai-agent/app/db/: __init__.py  queries.py
services/ai-agent/app/knowledge/: loader.py
services/ai-agent/app/memory/: consolidation.py  db.py  importance.py  retrieval.py
services/ai-agent/app/security/: content_filter.py  prompt_defense.py  rate_limiter.py  sanitizer.py
services/ai-agent/app/services/: cost_tracker.py  scheduler.py  weather.py
services/ai-agent/app/tools/: advice.py  base.py  care_records.py  constraints.py  diagnosis.py  knowledge.py  moderation.py  plants.py  registry.py  user.py  weather.py
services/ai-agent/app/vector/: __init__.py  client.py  collections.py  embeddings.py  indexer.py  (+1 more)
(+319 files in other folders)
